[22 - Mur/Mht] - fix:: login is taking too long

--- a/client/src/scss/components/_spinner.scss
+++ b/client/src/scss/components/_spinner.scss
@@ -1,14 +1,18 @@
 .spinner {
   margin: auto;
-  width: 40px;
-  height: 40px;
-  border: 4px solid #dcdcdd;
-  border-top-color: $primary-color;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  border-radius: 100%;
-  -webkit-animation: rotate 1s infinite ease-in-out both;
-  animation: rotate 1s infinite ease-in-out both;
+  &:before {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    border: 4px solid #dcdcdd;
+    border-top-color: $primary-color;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    -webkit-animation: rotate 1s infinite ease-in-out both;
+    animation: rotate 1s infinite ease-in-out both;
+  }
 }
 
 @-webkit-keyframes rotate {
